--- a/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
+++ b/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
@@ -10,6 +10,7 @@ Outreachy's Response to COVID-19
 <h1>Outreachy's Response to COVID-19</h1>
 
 <p><i>Date: March 27, 2020</i></p>
+<p><i>Updated: April 30, 2020</i> - See the "New policies for students" section below.</p>
 
 <img src="https://live.staticflickr.com/65535/49706037138_b014df3c3a.jpg" alt="Stronger together but 6 feet apart cc-by Sage Sharp" class="img-fluid">
 <p><i>Photo CC BY 2.0 Sage Sharp</i></p>
@@ -67,7 +68,7 @@ Outreachy wants to support our applicants, interns, and alums who are impacted b
 		May to August 2020 interns who are impacted by COVID-19 will only be required to work 30 hours a week. Interns who are not impacted are encouraged to work 40 hours a week.
 	</li>
 	<li>
-		Students who have an approved initial application will typically be considered eligible for an Outreachy internship, even if their school terms have shifted.
+		Students who have an approved initial application are eligible for an Outreachy internship. If their school terms have shifted due to COVID-19, students will only be required to work 10 hours a week during classes.
 	</li>
 	<li>
 		All applicants should update their final application with any changed time commitments.
@@ -143,6 +144,8 @@ For the May 2020 round, Outreachy organizers will use the last official school t
 
 <p>Please update your final application if your school releases a new official schedule. You can update your final application until the deadline on April 7 at 4pm UTC. If your school posts a new schedule after the final application deadline, please <a href='https://www.outreachy.org/contact/applicant-help/'>email the Outreachy applicant helpers</a> and send a link to the new schedule.
 </p>
+
+<p><b>Update:</b> Outreachy interns who are students may have their school term dates changed due to the impacts of COVID-19. If a student's school term is changed, they are only required to work 10 hours a week when classes are in session. If students are able to work more normal hours, they will get more out of the internship. We encourage interns to work as best they can, while not burning themselves out.</p>
 
 <p>
 Unfortunately, we cannot re-evaluate the eligibility of any applicant who did not have their initial application approved.
