Update reduced student hours policy

--- a/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
+++ b/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
@@ -10,7 +10,7 @@ Outreachy's Response to COVID-19
 <h1>Outreachy's Response to COVID-19</h1>
 
 <p><i>Date: March 27, 2020</i></p>
-<p><i>Updated: April 30, 2020</i> - See the "New policies for students" section below.</p>
+<p><i>Last updated: May 1, 2020</i> - See the "New policies for students" section below.</p>
 
 <img src="https://live.staticflickr.com/65535/49706037138_b014df3c3a.jpg" alt="Stronger together but 6 feet apart cc-by Sage Sharp" class="img-fluid">
 <p><i>Photo CC BY 2.0 Sage Sharp</i></p>
@@ -145,7 +145,7 @@ For the May 2020 round, Outreachy organizers will use the last official school t
 <p>Please update your final application if your school releases a new official schedule. You can update your final application until the deadline on April 7 at 4pm UTC. If your school posts a new schedule after the final application deadline, please <a href='https://www.outreachy.org/contact/applicant-help/'>email the Outreachy applicant helpers</a> and send a link to the new schedule.
 </p>
 
-<p><b>Update:</b> Outreachy interns who are students may have their school term dates changed due to the impacts of COVID-19. If a student's school term is changed, they are only required to work 10 hours a week when classes are in session. If students are able to work more normal hours, they will get more out of the internship. We encourage interns to work as best they can, while not burning themselves out.</p>
+<p><b>Update:</b> Outreachy interns who are students may have their school term dates changed due to the impacts of COVID-19. If a student's school term is changed, they are only required to work 10 hours a week when classes are in session. If students are able to work more normal hours, they will get more out of the internship. We encourage interns to work as best they can, while not burning themselves out. Students who work reduced hours will still receive the full internship stipend. Students who work reduced hours will not be required to extend the internship.</p>
 
 <p>
 Unfortunately, we cannot re-evaluate the eligibility of any applicant who did not have their initial application approved.
