Update COVID-19 reduced student hours policy to cover exam periods

--- a/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
+++ b/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
@@ -68,7 +68,7 @@ Outreachy wants to support our applicants, interns, and alums who are impacted b
 		May to August 2020 interns who are impacted by COVID-19 will only be required to work 30 hours a week. Interns who are not impacted are encouraged to work 40 hours a week.
 	</li>
 	<li>
-		Students who have an approved initial application are eligible for an Outreachy internship. If their school terms have shifted due to COVID-19, students will only be required to work 10 hours a week during classes.
+		Students who have an approved initial application are eligible for an Outreachy internship. If their school terms have shifted due to COVID-19, students will only be required to work 10 hours a week during classes and exams.
 	</li>
 	<li>
 		All applicants should update their final application with any changed time commitments.
@@ -145,7 +145,7 @@ For the May 2020 round, Outreachy organizers will use the last official school t
 <p>Please update your final application if your school releases a new official schedule. You can update your final application until the deadline on April 7 at 4pm UTC. If your school posts a new schedule after the final application deadline, please <a href='https://www.outreachy.org/contact/applicant-help/'>email the Outreachy applicant helpers</a> and send a link to the new schedule.
 </p>
 
-<p><b>Update:</b> Outreachy interns who are students may have their school term dates changed due to the impacts of COVID-19. If a student's school term is changed, they are only required to work 10 hours a week when classes are in session. If students are able to work more normal hours, they will get more out of the internship. We encourage interns to work as best they can, while not burning themselves out. Students who work reduced hours will still receive the full internship stipend. Students who work reduced hours will not be required to extend the internship.</p>
+<p><b>Update:</b> Outreachy interns who are students may have their school term dates changed due to the impacts of COVID-19. If a student's school term is changed, they are only required to work 10 hours a week when classes are in session or during exam periods. If students are able to work more normal hours, they will get more out of the internship. We encourage interns to work as best they can, while not burning themselves out. Students who work reduced hours will still receive the full internship stipend. Students who work reduced hours will not be required to extend the internship.</p>
 
 <p>
 Unfortunately, we cannot re-evaluate the eligibility of any applicant who did not have their initial application approved.
