Extend COVID-19 time commitment policies to the December 2020 round
The blog post didn't mention that students with shifted calendars would
only have to work 10 hours per week. Perhaps we thought schools would be
stable?? Or it was an over sight?? I don't remember. Make the
documentation match the blog post.

--- a/home/templates/home/snippet/covid-19-time-policy.html
+++ b/home/templates/home/snippet/covid-19-time-policy.html
@@ -1,10 +1,9 @@
 <div class="card border-warning mb-3">
 	<div class="card-header text-white bg-warning">Temporary time commitment policy</div>
 	<div class="card-body">
-		<h5 class="card-title">May to August 2020 interns</h5>
-		<p>The Outreachy organizers have adopted a temporary time commitment policy for the May to August 2020 interns.</p>
+		<p>The Outreachy organizers have adopted a temporary time commitment policy for the December 2020 to March 2021 interns.</p>
 		<p class="card-text">All interns will be required to work for 12 out of 13 weeks during the internship.</p>
-		<p class="card-text">Some interns have a reduced minimum internship time commitment. Please see the table below and <a href='{% url '2020-03-covid' %}'>read our COVID-19 blog post</a> for more details.</p>
+		<p class="card-text">Some interns have a reduced minimum internship time commitment. Please see the table below and <a href='{% url '2020-08-initial-apps-open' %}#covid-19'>read our COVID-19 blog post</a> for more details.</p>
 		<table class="table table-striped table-bordered">
 			<thread class="thread-dark">
 			<tr>
@@ -13,11 +12,6 @@
 				<th scope="col">Duration</th>
 			</tr>
 			</thread>
-			<tr>
-				<td>Students with school term dates changed due to COVID-19 impacts</td>
-				<td>10 hours a week</td>
-				<td>During classes and exams</td>
-			</tr>
 			<tr>
 				<td>Anyone impacted by COVID-19</td>
 				<td>30 hours a week</td>
