Extend COVID-19 time policies
Stop mentioning which round the time policies apply to. The impacts of
COVID-19 will be seen for years to come. I suspect we will be applying
this policy for several more intern cohorts.

--- a/home/templates/home/snippet/covid-19-time-policy.html
+++ b/home/templates/home/snippet/covid-19-time-policy.html
@@ -1,7 +1,7 @@
 <div class="card border-warning mb-3">
 	<div class="card-header text-white bg-warning">Temporary time commitment policy</div>
 	<div class="card-body">
-		<p>The Outreachy organizers have adopted a temporary time commitment policy for the December 2020 to March 2021 interns.</p>
+		<p>The Outreachy organizers have adopted a temporary time commitment policy. This policy will help interns impacted by the COVID-19 pandemic. This policy will be in place until further notice.</p>
 		<p class="card-text">All interns will be required to work for 12 out of 13 weeks during the internship.</p>
 		<p class="card-text">Some interns have a reduced minimum internship time commitment. Please see the table below and <a href='{% url '2020-08-initial-apps-open' %}#covid-19'>read our COVID-19 blog post</a> for more details.</p>
 		<table class="table table-striped table-bordered">
