--- a/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
+++ b/home/templates/home/blog/2020-03-27-outreachy-response-to-covid-19.html
@@ -194,7 +194,7 @@ Travel Is Prohibited
 </h2>
 
 <p>
-Under normal circiumstances, Outreachy interns receive a $500 <a href='https://www.outreachy.org/travel-stipend/'>travel stipend</a>. The travel stipend is valid for travel for up to 2 years from the start of the internship. The travel stipend is used to allow interns to attend conferences and events with a strong free software component that are relevant to their internship. The goal is to allow interns to network with the free software community and find jobs that allow them to use or contribute to free software. However, now is the time to stop travelling and help stop the spread of COVID-19.
+Under normal circiumstances, Outreachy interns receive a $500 travel stipend. The travel stipend is valid for travel for up to 2 years from the start of the internship. The travel stipend is used to allow interns to attend conferences and events with a strong free software component that are relevant to their internship. The goal is to allow interns to network with the free software community and find jobs that allow them to use or contribute to free software. However, now is the time to stop travelling and help stop the spread of COVID-19.
 </p>
 
 <p>
